--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
+    "@peaze-labs/react": "^0.2.1",
+    "alchemy-sdk": "^2.6.1",
     "classnames": "^2.3.1",
-    "next": "^12.0.9",
+    "ethers": "^6.1.0",
+    "next": "^13.2.4",
+    "next-auth": "^4.20.1",
     "next-seo": "^4.29.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "next-transpile-modules": "^10.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "wagmi": "^0.12.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.9",
@@ -36,7 +42,7 @@
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-next": "^12.0.9",
+    "eslint-config-next": "^13.2.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
