--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
     "@peaze-labs/react": "^0.2.1",
-    "alchemy-sdk": "^2.6.1",
     "classnames": "^2.3.1",
     "ethers": "^6.1.0",
     "next": "^13.2.4",
@@ -27,8 +26,7 @@
     "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-jsx-plugin-postcss": "^4.0.1",
-    "wagmi": "^0.12.1"
+    "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.9",
