--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
     "@peaze-labs/react": "^0.2.1",
+    "@vercel/analytics": "^0.1.11",
     "classnames": "^2.3.1",
     "ethers": "^6.1.0",
     "next": "^13.2.4",
